# SokolPlayground

./: .gitignore  .gitmodules  README.md  meson.build
src/: Gui.cpp  Gui.hpp  Unit.cpp  main.cpp  meson.build  sokolsample.cpp
src/shaders/: uniforms.glsl
subprojects/: sokol.wrap
